# quant_trade

./: .env.example  .gitignore  .pre-commit-config.yaml  .secrets.baseline  README.md  config.private.yaml.example  config.yaml  pyproject.toml  requirements.txt  test_baostock.py  test_eastmoney_risk_control.py  test_sina_daily.py  test_sina_factor.py
.github/: dependabot.yml
.github/workflows/: ci.yml
scripts/: backfill_delisted.py  fetch_industry_map.py  fetch_tdx_f10.py  fetch_tushare_basic.py  test_gbbq.py  test_stock_st.py
src/: __init__.py  main.py
src/data/: __init__.py  adjust.py  factors.py  fetcher.py  gbbq.py  processor.py  profile.py  resample.py  storage.py  suspend.py  trading_calendar.py  universe.py
src/data/sources/: __init__.py  _gbbq_key.py  akshare_source.py  baostock_source.py  base.py  mootdx_source.py  pytdx_source.py  tdx_reader.py  tushare_pool.py  tushare_source.py
src/engine/: __init__.py  backtester.py  execution.py  minute_backtester.py  portfolio.py
src/factor/: __init__.py  base.py  fundamental.py  technical.py
src/risk/: __init__.py  risk_manager.py
src/strategy/: __init__.py  base.py  loader.py
src/strategy/examples/: __init__.py  ma_rsi.py
src/utils/: __init__.py  config_loader.py  helpers.py
tests/: conftest.py  test_adjust.py  test_data_integrity.py  test_gbbq_factor.py  test_optimize_windows.py  test_suspend.py
tests/data/: test_calendar.py  test_factors.py  test_fetcher.py  test_profile.py  test_tdx_reader.py  test_tushare_pool.py  test_universe.py
tests/engine/: test_backtester.py  test_execution.py  test_minute_backtester.py  test_portfolio.py
tests/factor/: test_base.py  test_technical.py
tests/risk/: test_risk_manager.py
tests/strategy/: test_loader.py
tests/utils/: test_config_loader.py  test_helpers.py
